# Multi_Agent_Research_Assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/: orchestrator.py
frontend/: app.py
learning/: integration_test.py  prompt_test.py
models/: schemas.py
tools/: embedder.py  integration_test.py  llm_tool.py  prompt_test.py  rag_pipeline.py  vector_store.py
