[project]
name = "multi-agent-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arxiv>=4.0.0",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "google-genai>=2.8.0",
    "groq>=1.5.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.49.0",
]
